Fixed: Navbar no longer overflowed by Translator

--- a/src/styles/catalogo/phone.css
+++ b/src/styles/catalogo/phone.css
@@ -213,6 +213,8 @@ color: #ff99ac;
     justify-content: center;
     align-items: center;
     text-align: center;
+    top: 0;
+    left: 0;
       @media (max-width: 1204px) {
     height: 7%;
       }
